--- a/views/admin/offer.ejs
+++ b/views/admin/offer.ejs
@@ -18,7 +18,7 @@
                                 <th>Discount Persentage</th>
                                 <th>Starting Date</th>
                                 <th>expiry Date</th>
-                                <th>Status</th>
+                                <!-- <th>Status</th> -->
                                 <th>Action</th>
                             </tr>
                         </thead>
@@ -30,12 +30,10 @@
                                     <td><%= offer.discount %></td>
                                     <td><%= new Date(offer.startingDate).toLocaleDateString('en-US', { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' }) %></td>
                                     <td><%= new Date(offer.expiryDate).toLocaleDateString('en-US', { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' }) %></td>
-                                    <td class="<%= offer.status === true ? 'text-success' : 'text-danger' %>"><%= offer.status %></td>
+                                    <!-- <td class="<%= offer.status === true ? 'text-success' : 'text-danger' %>"><%= offer.status %></td> -->
                                     <td>
                                         <button class="btn btn-primary"><a style="color: white; text-decoration: none;" href="/admin/offers/edit/<%= offer._id %>">Edit</a></button>
-                                        <button type="button" class="btn <%= offer.status === true ? 'btn-danger' : 'btn-success' %>"  onclick="toggleProduct('', '')">
-                                            <%= offer.status === true ? 'Block' : 'Activate' %>
-                                        </button>
+                                        <button type="button" class="btn btn-danger"  onclick="deleteOffer('<%= offer._id %>')"> Delete</button>
                                     </td>
                                 </tr>
                             <% }); %>
@@ -61,5 +59,48 @@
     </div>
 </footer>
 
+<script>
+    function deleteOffer(offerId) {
+
+    Swal.fire({
+        title: 'Confirmation',
+        text: 'Are you sure you want to Delete this Offer?',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes'
+    }).then((result) => {
+        if(result.isConfirmed) {
+            fetch(`/admin/offers/delete/${offerId}`, {
+                method: 'POST'
+            })
+            .then(response => {
+                if(response.ok) {
+                    Swal.fire(
+                        'Success!',
+                        'Offer is deleted successfully',
+                        'success'
+                    ).then(() => {
+                        window.location.reload();    // Refresh the page
+                    });
+                }else {
+                    throw new Error('Something went wrong');
+                }
+            })
+            .catch(error => {
+                console.error('Error:',error);
+                Swal.fire(
+                    'Error!',
+                    'Something went wrong.',
+                    'error'
+                );
+            });
+        }
+    });
+    
+}
+
+</script>
 
 <%- include('./layout/adfooter.ejs') %>
