--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -36,7 +36,7 @@
                             <a class="nav-link "   href="/address"  >Adresses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"  href="" >Wallet</a>
+                            <a class="nav-link"  href="/wallet" >Wallet</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Sign Out</a>
