--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -34,7 +34,7 @@
                                 <a class="nav-link" href="/address" >Adresses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link"  href="#tab-account" >Wallet</a>
+                                <a class="nav-link"  href="/wallet" >Wallet</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/logout">Sign Out</a>
