--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -43,6 +43,9 @@
 
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+      <!--icon cdn-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-y4DjUEhne3FoGjgVFqFzOquNkn+lDNcXnJ4idqUivt4j89khVg4OhzN5YwfuP1zn" crossorigin="anonymous">
 </head>
 
 <body>
