--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -90,8 +90,10 @@
                                         </a>
     
                                         <div class="product-action-vertical">
-                                            <a href="#" class="btn-product-icon btn-wishlist"><span>add to wishlist</span></a>
+                                            <a href="/add-wishlist/<%= product._id %>" class="btn-product-icon btn-wishlist btn-expandable"  ><span>add to wishlist</span></a>
+                                            <!-- <a href="" class="btn-product-icon btn-quickview" title="Quick view"><span>Quick view</span></a> -->
                                         </div><!-- End .product-action-vertical -->
+
                                         <% } else { %>
                                             <p>This product is not available</p>
                                         <% } %>
@@ -99,8 +101,12 @@
     
                                     <div class="product-body">
                                         <h3 class="product-title"><a href="/product/<%= product._id %>"><%= product.name %></a></h3><!-- End .product-title -->
-                                        <div class="product-price">₹
-                                            <%= product.discount %>
+                                        <div class="product-price">
+                                            <% if(product.offer && product.offer.status === true) { %>
+                                                ₹<%= product.offerPrice %>
+                                            <% }else { %>  
+                                                ₹<%= product.discount %>
+                                            <% } %>
                                             <div class="text-muted ml-2">
                                             <small><del>₹<%= product.price %></del></small>
                                             </div>
@@ -193,8 +199,10 @@
                                                     <img src="<%=product.pictures[1] %>" alt="Product image" class="product-image-hover">
                                                 </a>
                                                 <div class="product-action-vertical">
-                                                    <a href="#" class="btn-product-icon btn-wishlist"><span>add to wishlist</span></a>
+                                                    <a href="/add-wishlist/<%= product._id %>" class="btn-product-icon btn-wishlist btn-expandable"  ><span>add to wishlist</span></a>
+                                                    <!-- <a href="" class="btn-product-icon btn-quickview" title="Quick view"><span>Quick view</span></a> -->
                                                 </div><!-- End .product-action-vertical -->
+
                                             <% } else { %>
                                                 <p>This product is not available</p>
                                             <% } %>
@@ -202,8 +210,11 @@
             
                                         <div class="product-body">
                                             <h3 class="product-title"><a href="/product/<%= product._id %>"><%= product.name %></a></h3><!-- End .product-title -->
-                                            <div class="product-price">₹
-                                                <%= product.discount %>
+                                            <div class="product-price"><% if(product.offer && product.offer.status === true) { %>
+                                                ₹<%= product.offerPrice %>
+                                            <% }else { %>  
+                                                ₹<%= product.discount %>
+                                            <% } %>
                                                 <div class="text-muted ml-2">
                                                     <small><del>₹<%= product.price %></del></small>
                                                 </div>
@@ -279,7 +290,7 @@
                         <div class="col-md-10 col-lg-9 col-xl-8">
                             <div class="row no-gutters flex-column flex-sm-row align-items-sm-center">
                                 <div class="col">
-                                    <h3 class="cta-title text-white">Sign Up & Get 10% Off</h3><!-- End .cta-title -->
+                                    <h6 class="cta-title text-white">Sign Up With ReferralCode get ₹250</h6><!-- End .cta-title -->
                                     <p class="cta-desc text-white">FurniHub presents the best in interior design</p><!-- End .cta-desc -->
                                 </div><!-- End .col -->
 
