--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -44,13 +44,51 @@
                         </ul>
                     </aside><!-- End .col-lg-3 -->
 
-                    <div class="ml-5 ">
-                        <div class="tab-content">
-                            <div class="" >
-
-                                <h1>Wallet</h1>
-                            </div>
+                    <div class="col-lg-9 col-md-8 w-50" style="background-color: rgb(232, 229, 229); border-radius: 10px; padding: 20px;">
+                        <div class="tab-content text-center">
+                            <h3 style="font-family: Arial, Helvetica, sans-serif; margin-bottom: 10px;">Wallet</h3>
+                            
                         </div>
+                        <% if(wallet){ %>
+                        
+                        <div>
+                           
+                            <h6 style="margin-bottom: 10px;">
+                                <% if(wallet.amount) { %>
+                                    Balance: ₹<%=wallet.amount %>
+                                <% }else{ %>
+                                    Balance: ₹0.00
+                                <% } %>
+                            </h6>
+                            
+                        </div>
+                        <table class="table">
+                            <thead class="thead-dark">
+                                <tr>
+                                <th scope="col">Date</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Reson</th>
+                                <th scope="col">Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                <th>1</th>
+                                <td><%= wallet.order.name %></td>
+                                <td><%= wallet.order.reson %></td>
+                                <% if(wallet.order.status === 'credited'){ %> 
+                                    <td class="text-success">+<%= wallet.order.price %></td>
+                                <% }else { %> 
+                                    <td class="text-danger">-<%= wallet.order.price %></td>
+                                <% } %>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <% }else { %>
+                            <h6 style="margin-bottom: 10px;">Balance: ₹0.00</h6>
+                        <% } %>
+                    </div>
+                    
                     </div>
                 </div>
             </div>
